--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pytz==2022.7
 requests==2.28.1
 six==1.16.0
 soupsieve==2.3.2.post1
+tabulate==0.9.0
 urllib3==1.26.13
 webencodings==0.5.1
 yahoofinancials==1.7
