--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pycryptodome==3.16.0
 python-dateutil==2.8.2
 pytz==2022.7
 requests==2.28.1
+scipy==1.10.0
 six==1.16.0
 soupsieve==2.3.2.post1
 tabulate==0.9.0
